--- a/notebooks/generate_wave_eqn_data.ipynb
+++ b/notebooks/generate_wave_eqn_data.ipynb
@@ -8037,7 +8037,7 @@
    "outputs": [],
    "source": [
     "# EXPORT\n",
-    "def plot_fft(num_sources=130,f0=f0,dt=dt,nt=nt,c=c,dx=dx,insync=True,i=50,j=50):\n",
+    "def plot_fft(num_sources=130,f0=1,dt=.1,nt=200,c=1,dx=.2,insync=True,i=50,j=50):\n",
     "    s = generate_wave_data(num_sources=num_sources,f0=f0,dt=dt,nt=nt,c=c,dx=dx,insync=True)\n",
     "    s0 = s[:,i,j].squeeze()\n",
     "    t = dt*np.arange(len(s0))\n",
